[gd_scene load_steps=37 format=2]

[ext_resource path="res://character/nodes/Body_parts/BodyPart.tscn" type="PackedScene" id=1]
[ext_resource path="res://Archives/Character3.gd" type="Script" id=2]
[ext_resource path="res://character/nodes/raycast_2D.gd" type="Script" id=3]
[ext_resource path="res://character/nodes/Body_parts/damageable/parts/Head.tscn" type="PackedScene" id=4]
[ext_resource path="res://character/nodes/Body_parts/damageable/parts/ArmTop.tscn" type="PackedScene" id=5]
[ext_resource path="res://character/nodes/Body_parts/damageable/parts/ArmBottom.tscn" type="PackedScene" id=6]
[ext_resource path="res://character/nodes/Body_parts/damageable/parts/LegTop.tscn" type="PackedScene" id=7]
[ext_resource path="res://character/nodes/Body_parts/damageable/parts/LegBottom.tscn" type="PackedScene" id=8]
[ext_resource path="res://character/nodes/movement_manager.gd" type="Script" id=9]
[ext_resource path="res://character/nodes/DEPRECATED/StateMachine.gd" type="Script" id=10]
[ext_resource path="res://character/nodes/animation_player.gd" type="Script" id=11]
[ext_resource path="res://character/nodes/arms_manager.gd" type="Script" id=12]
[ext_resource path="res://Character/Scripts/ActionManager.gd" type="Script" id=13]
[ext_resource path="res://character/nodes/item_manager/item_manager.gd" type="Script" id=14]
[ext_resource path="res://character/nodes/DEPRECATED/ActionPlayer.gd" type="Script" id=15]























[sub_resource type="PhysicsMaterial" id=1]
friction = 0.2

[sub_resource type="CapsuleShape2D" id=2]
resource_local_to_scene = true
radius = 1.442
height = 25.47

[sub_resource type="PhysicsMaterial" id=3]
friction = 0.2

[sub_resource type="PhysicsMaterial" id=4]
friction = 0.2

[sub_resource type="PhysicsMaterial" id=5]
friction = 0.2

[sub_resource type="PhysicsMaterial" id=6]
friction = 0.2

[sub_resource type="PhysicsMaterial" id=7]

[sub_resource type="PhysicsMaterial" id=8]
friction = 0.2

[sub_resource type="PhysicsMaterial" id=9]
friction = 0.2

[sub_resource type="PhysicsMaterial" id=10]
friction = 0.2

[sub_resource type="PhysicsMaterial" id=11]
friction = 0.2
absorbent = true

[sub_resource type="Animation" id=12]
tracks/0/type = "value"
tracks/0/path = NodePath("TorsoLegAxle:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TorsoLegAxle/LegTopBottomAxle:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("TorsoLegAxle2:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("TorsoLegAxle2/LegTopBottomAxle2:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=13]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("TorsoLegAxle:rotation_degrees")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ -30.0, 0.0, 10.0, 20.0, 10.0, -10.0, -45.0, -50.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TorsoLegAxle/LegTopBottomAxle:rotation_degrees")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 40.0, 20.0, 15.0, 30.0, 60.0, 70.0, 45.0, 10.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("TorsoLegAxle2:rotation_degrees")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 10.0, -10.0, -45.0, -50.0, -30.0, 0.0, 10.0, 20.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("TorsoLegAxle2/LegTopBottomAxle2:rotation_degrees")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 60.0, 70.0, 45.0, 10.0, 40.0, 15.0, 10.0, 30.0 ]
}

[sub_resource type="Animation" id=14]
resource_name = "RunningLeft"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("TorsoLegAxle:rotation_degrees")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 30.0, 0.0, -10.0, -20.0, -10.0, 10.0, 45.0, 50.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TorsoLegAxle/LegTopBottomAxle:rotation_degrees")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ -40.0, -20.0, -15.0, -30.0, -60.0, -70.0, -45.0, -10.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("TorsoLegAxle2:rotation_degrees")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ -10.0, 10.0, 45.0, 50.0, 30.0, 0.0, -10.0, -20.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("TorsoLegAxle2/LegTopBottomAxle2:rotation_degrees")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ -60.0, -70.0, -45.0, -10.0, -40.0, -15.0, -10.0, -30.0 ]
}

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "Running"

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "RunningLeft"

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "Idle"

[sub_resource type="AnimationNodeBlendSpace1D" id=18]
blend_point_0/node = SubResource( 15 )
blend_point_0/pos = 1.0
blend_point_1/node = SubResource( 16 )
blend_point_1/pos = -1.0
blend_point_2/node = SubResource( 17 )
blend_point_2/pos = 0.0

[sub_resource type="AnimationNodeTimeScale" id=19]

[sub_resource type="AnimationNodeBlendTree" id=20]
graph_offset = Vector2( -237, -74 )
nodes/BlendSpace1D/node = SubResource( 18 )
nodes/BlendSpace1D/position = Vector2( 60, -20 )
nodes/TimeScale/node = SubResource( 19 )
nodes/TimeScale/position = Vector2( 320, -20 )
nodes/output/position = Vector2( 520, 0 )
node_connections = [ "output", 0, "TimeScale", "TimeScale", 0, "BlendSpace1D" ]

[sub_resource type="RectangleShape2D" id=21]
resource_local_to_scene = true
extents = Vector2( 38.3018, 53.6287 )

[node name="Character" index="0" instance=ExtResource( 1 )]
collision_layer = 0
collision_mask = 0
mass = 5.5
physics_material_override = SubResource( 1 )
script = ExtResource( 2 )
scale_coeff = 1.0
speed_coeff = 1.0
body_scale_mult = 1.0
body_mass_mult = 1.0
layer_array = [  ]
mask_array = [  ]
targetNodePath = NodePath("Ghost/TorsoAxle")
enabled = true
power = 5.0
maxAppliedAngularV = 100.0
maxAppliedDamp = 50.0
brakePower = 15.0
AngleRestriction = false
minAngle = 0.0
maxAngle = 0.0
maxAppliableAngularV = 5.0
maxAppliedTorque = 50.0
is_scaled = true

[node name="Sprite" parent="." index="0"]
scale = Vector2( 0.3, 0.3 )
region_rect = Rect2( 86, 0, 11, 95 )

[node name="CollisionShape2D" parent="." index="1"]
shape = SubResource( 2 )

[node name="RayCast2D" type="RayCast2D" parent="." index="2"]
visible = false
enabled = true
cast_to = Vector2( 0, 52 )
collision_mask = 2
script = ExtResource( 3 )

[node name="BodyParts" type="Node2D" parent="." index="3"]

[node name="Head" parent="BodyParts" index="0" instance=ExtResource( 4 )]
position = Vector2( 0, -13.7864 )
collision_layer = 0
collision_mask = 0
mass = 0.6
physics_material_override = SubResource( 3 )
continuous_cd = 1
targetNodePath = NodePath("../../Ghost/TorsoHeadAxle")
power = 20.0
brakePower = 1.0
restrictionPower = 1.0
maxAppliableAngularV = 15

[node name="ArmTop" parent="BodyParts" index="1" instance=ExtResource( 5 )]
editor/display_folded = true
position = Vector2( 0, -10.176 )
collision_layer = 0
collision_mask = 0
mass = 0.4
physics_material_override = SubResource( 4 )
continuous_cd = 1
targetNodePath = NodePath("../../Ghost/TorsoAxle/TorsoArmAxle")
power = 20.0
brakePower = 1.0
restrictionPower = 1.0
maxAppliableAngularV = 15

[node name="ArmBottom" parent="BodyParts/ArmTop" index="2" instance=ExtResource( 6 )]
editor/display_folded = true
position = Vector2( 0, 11.4021 )
mass = 0.2
physics_material_override = SubResource( 5 )
continuous_cd = 1
targetNodePath = NodePath("../../../Ghost/TorsoAxle/TorsoArmAxle/ArmTopBotomAxle")
power = 20.0
brakePower = 1.0
minAngle = -3.0
restrictionPower = 1.0
maxAppliableAngularV = 15

[node name="HandPin" type="PinJoint2D" parent="BodyParts/ArmTop/ArmBottom" index="2"]
visible = false
position = Vector2( 0, 15.7739 )
bias = 0.9

[node name="LegTop" parent="BodyParts" index="2" instance=ExtResource( 7 )]
editor/display_folded = true
position = Vector2( 0, 13.3132 )
collision_layer = 0
collision_mask = 0
physics_material_override = SubResource( 6 )
continuous_cd = 1
targetNodePath = NodePath("../../Ghost/TorsoLegAxle")
power = 20.0
brakePower = 1.0
minAngle = -1.5
maxAngle = 1.5
restrictionPower = 1.0
maxAppliableAngularV = 15

[node name="LegBottom" parent="BodyParts/LegTop" index="2" instance=ExtResource( 8 )]
position = Vector2( 0, 17.4546 )
mass = 0.8
physics_material_override = SubResource( 7 )
continuous_cd = 1
targetNodePath = NodePath("../../../Ghost/TorsoLegAxle/LegTopBottomAxle")
power = 20.0
brakePower = 1.0
maxAngle = 2.0
restrictionPower = 1.0
maxAppliableAngularV = 15

[node name="ArmTop2" parent="BodyParts" index="3" instance=ExtResource( 5 )]
editor/display_folded = true
position = Vector2( 0, -10.176 )
collision_layer = 0
collision_mask = 0
mass = 0.4
physics_material_override = SubResource( 8 )
continuous_cd = 1
targetNodePath = NodePath("../../Ghost/TorsoAxle/TorsoArmAxle2")
power = 20.0
brakePower = 1.0
restrictionPower = 1.0
maxAppliableAngularV = 15

[node name="ArmBottom2" parent="BodyParts/ArmTop2" index="2" instance=ExtResource( 6 )]
editor/display_folded = true
position = Vector2( 0, 11.4021 )
mass = 0.2
physics_material_override = SubResource( 9 )
continuous_cd = 1
targetNodePath = NodePath("../../../Ghost/TorsoAxle/TorsoArmAxle2/ArmTopBotomAxle2")
power = 20.0
brakePower = 1.0
minAngle = -3.0
restrictionPower = 1.0
maxAppliableAngularV = 15

[node name="HandPin2" type="PinJoint2D" parent="BodyParts/ArmTop2/ArmBottom2" index="2"]
visible = false
position = Vector2( 0, 15.7739 )
bias = 0.9

[node name="LegTop2" parent="BodyParts" index="4" instance=ExtResource( 7 )]
editor/display_folded = true
position = Vector2( 0, 13.3132 )
collision_layer = 0
collision_mask = 0
physics_material_override = SubResource( 10 )
continuous_cd = 1
targetNodePath = NodePath("../../Ghost/TorsoLegAxle2")
power = 20.0
brakePower = 1.0
minAngle = -1.5
maxAngle = 1.5
restrictionPower = 1.0
maxAppliableAngularV = 15

[node name="LegBottom2" parent="BodyParts/LegTop2" index="2" instance=ExtResource( 8 )]
position = Vector2( 0, 17.4546 )
mass = 0.8
physics_material_override = SubResource( 11 )
continuous_cd = 1
targetNodePath = NodePath("../../../Ghost/TorsoLegAxle2/LegTopBottomAxle2")
power = 20.0
brakePower = 1.0
maxAngle = 2.0
restrictionPower = 1.0
maxAppliableAngularV = 15

[node name="Pins" type="Node2D" parent="." index="4"]
editor/display_folded = true
visible = false

[node name="HeadTorsoPin" type="PinJoint2D" parent="Pins" index="0"]
position = Vector2( 0, -13.786 )
node_a = NodePath("../..")
node_b = NodePath("../../BodyParts/Head")

[node name="TorsoArmPin" type="PinJoint2D" parent="Pins" index="1"]
position = Vector2( 0, -10.176 )
node_a = NodePath("../..")
node_b = NodePath("../../BodyParts/ArmTop")

[node name="ArmTopBottomPin" type="PinJoint2D" parent="Pins" index="2"]
position = Vector2( 0, 1.226 )
node_a = NodePath("../../BodyParts/ArmTop")
node_b = NodePath("../../BodyParts/ArmTop/ArmBottom")

[node name="TorsoLegPin" type="PinJoint2D" parent="Pins" index="3"]
position = Vector2( 0, 13.313 )
node_a = NodePath("../..")
node_b = NodePath("../../BodyParts/LegTop")

[node name="LegTopBottomPin" type="PinJoint2D" parent="Pins" index="4"]
position = Vector2( 0, 30.768 )
node_a = NodePath("../../BodyParts/LegTop")
node_b = NodePath("../../BodyParts/LegTop/LegBottom")

[node name="TorsoArmPin2" type="PinJoint2D" parent="Pins" index="5"]
position = Vector2( 0, -10.176 )
node_a = NodePath("../..")
node_b = NodePath("../../BodyParts/ArmTop2")

[node name="ArmTopBottomPin2" type="PinJoint2D" parent="Pins" index="6"]
position = Vector2( 0, 1.226 )
node_a = NodePath("../../BodyParts/ArmTop2")
node_b = NodePath("../../BodyParts/ArmTop2/ArmBottom2")

[node name="TorsoLegPin2" type="PinJoint2D" parent="Pins" index="7"]
position = Vector2( 0, 13.313 )
node_a = NodePath("../..")
node_b = NodePath("../../BodyParts/LegTop2")

[node name="LegTopBottomPin2" type="PinJoint2D" parent="Pins" index="8"]
position = Vector2( 0, 30.768 )
node_a = NodePath("../../BodyParts/LegTop2")
node_b = NodePath("../../BodyParts/LegTop2/LegBottom2")

[node name="Ghost" type="Node2D" parent="." index="5"]
editor/display_folded = true
visible = false

[node name="TorsoHeadAxle" type="Position2D" parent="Ghost" index="0"]
position = Vector2( 0, -13.8082 )

[node name="TorsoAxle" type="Position2D" parent="Ghost" index="1"]
position = Vector2( 0, 12.493 )

[node name="TorsoArmAxle" type="Position2D" parent="Ghost/TorsoAxle" index="0"]
position = Vector2( -1.93715e-07, -22.9125 )

[node name="ArmTopBotomAxle" type="Position2D" parent="Ghost/TorsoAxle/TorsoArmAxle" index="0"]
position = Vector2( 0, 10.6509 )

[node name="TorsoArmAxle2" type="Position2D" parent="Ghost/TorsoAxle" index="1"]
position = Vector2( 1.66893e-06, -22.9125 )

[node name="ArmTopBotomAxle2" type="Position2D" parent="Ghost/TorsoAxle/TorsoArmAxle2" index="0"]
position = Vector2( 0, 10.6509 )

[node name="TorsoLegAxle" type="Position2D" parent="Ghost" index="2"]
position = Vector2( -4.17233e-07, 12.4927 )

[node name="LegTopBottomAxle" type="Position2D" parent="Ghost/TorsoLegAxle" index="0"]
position = Vector2( 0, 16.907 )

[node name="TorsoLegAxle2" type="Position2D" parent="Ghost" index="3"]
position = Vector2( 5.36442e-07, 12.4927 )

[node name="LegTopBottomAxle2" type="Position2D" parent="Ghost/TorsoLegAxle2" index="0"]
position = Vector2( 0, 16.907 )

[node name="MovementManager" type="Node" parent="." index="6"]
script = ExtResource( 9 )
movement_speed = 200.0
jump_power = 4000.0
jump_hold_power = 2000.0

[node name="StateMachine" type="Node" parent="." index="7"]
script = ExtResource( 10 )

[node name="AnimationManager" type="AnimationPlayer" parent="." index="8"]
root_node = NodePath("../Ghost")
playback_process_mode = 0
playback_speed = 0.5
anims/Idle = SubResource( 12 )
anims/Running = SubResource( 13 )
anims/RunningLeft = SubResource( 14 )
script = ExtResource( 11 )

[node name="AnimationTree" type="AnimationTree" parent="." index="9"]
tree_root = SubResource( 20 )
anim_player = NodePath("../AnimationManager")
active = true
process_mode = 0
parameters/BlendSpace1D/blend_position = 0.0
parameters/TimeScale/scale = 1.0

[node name="GrabArea" type="Area2D" parent="." index="10"]
visible = false
position = Vector2( 0, 20.6906 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="GrabArea" index="0"]
shape = SubResource( 21 )

[node name="ArmsManager" type="Node" parent="." index="11"]
script = ExtResource( 12 )

[node name="ActionManager" type="Node" parent="." index="12"]
script = ExtResource( 13 )

[node name="ItemManager" type="Node" parent="." index="13"]
script = ExtResource( 14 )
_right_hand_path = NodePath("../BodyParts/ArmTop/ArmBottom")
_left_hand_path = NodePath("../BodyParts/ArmTop2/ArmBottom2")
_right_hand_grabPoint_path = NodePath("../BodyParts/ArmTop/ArmBottom/HandPin")
_left_hand_grabPoint_path = NodePath("../BodyParts/ArmTop2/ArmBottom2/HandPin2")

[node name="ActionPlayer" type="Node" parent="." index="14"]
script = ExtResource( 15 )
[connection signal="collision_entered" from="RayCast2D" to="MovementManager" method="_on_RayCast2D_collision_entered"]
[connection signal="collision_exited" from="RayCast2D" to="MovementManager" method="_on_RayCast2D_collision_exited"]
